objects/MXConfiguration__mdt.object
<CustomObject>
    <description>Metadata for all the configs related to MX</description>
    <fields>
        <fullName>Accept__c</fullName>
        <description>accept to be passed in MX APIs</description>
        <label>Accept</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiKey__c</fullName>
        <description>API Key</description>
        <label>APl Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <description>stores client id for MX flow</description>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <description>Content type passed in MX APIs</description>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <description>Endpoint url of the requests</description>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked http request body will be logged in &apos;Debug Logs&apos;.</description>
        <inlineHelpText>If checked http request body will be logged in &apos;Debug Logs&apos;.</inlineHelpText>
        <label>Log Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked response from http will be logged in &apos;Debug Logs&apos;.</description>
        <inlineHelpText>If checked response from http will be logged in &apos;Debug Logs&apos;.</inlineHelpText>
        <label>Log Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>Timeout for the request . Default set to 20ms</description>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MX Configuration</label>
    <pluralLabel>MX Configurations</pluralLabel>
</CustomObject>